[metadata]
name = multilint
version = 4.0.0
description = Run multiple python linters easily
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/multilint
project_urls =
    Changelog = https://github.com/adamchainz/multilint/blob/master/HISTORY.rst
license = ISC license
keywords = lint, flake8, pep8, pycodestyle, codestyle, mccabe, setup.py
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =

python_requires = >=3.5
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    multilint = multilint:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = apig_wsgi
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    src
    setup.py
